[package]
name = "text-render"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[dependencies.pangocairo]
git = "https://github.com/razrfalcon/pangocairo-rs"
version = "0.1.1"

[dependencies.pango]
git = "https://github.com/gtk-rs/pango"
version = "0.1.1"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.1.1"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"
version = "0.5.1"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.1"
